# nfcgate

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md  native-hook-issues-with-device.md
app/: build.gradle  lint-baseline.xml
app/assets/: xposed_init
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/html/: WorkaroundInfo.en.html  bcm20793-info.en.html  desfire-info.en.html
app/src/main/jni/: dummy.cpp  nfcipc.cpp
app/src/main/res/drawable/: ic_check_circle_green_24dp.xml  ic_error_red_24dp.xml  ic_help_orange_24dp.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_nfc_grey_42dp.xml  ic_reader_grey_60dp.xml  ic_record_grey_60dp.xml  ic_stop_grey_60dp.xml  ic_tag_grey_60dp.xml  ic_warning_grey_24dp.xml  log_background.xml  semaphore_light_green.xml
app/src/main/res/drawable-mdpi/: color_selector1.xml  color_selector2.xml
app/src/main/res/drawable-xhdpi/: semaphore_light_red.xml  semaphore_light_yellow.xml
app/src/main/res/layout/: about.xml  activity_about_workaround.xml  activity_basic_clone.xml  activity_logging_detail.xml  activity_main.xml  dialog_enablenfc.xml  dialog_token.xml  dialog_workaroundwarning.xml  enablenfc.xml  fragment_capture.xml  fragment_clone.xml  fragment_log_entry.xml  fragment_logging.xml  fragment_logging_detail.xml  fragment_logging_list.xml  fragment_logging_row.xml  fragment_network.xml  fragment_relay.xml  fragment_replay.xml  fragment_status.xml  list_log.xml  list_log_entry.xml  list_status.xml  navbar_header.xml  new_activity_main.xml  settings.xml  splash.xml  tag_semaphore.xml  tag_wait.xml  token.xml  workaroundwarning.xml
app/src/main/res/menu/: menu_log.xml  menu_logging_detail.xml  menu_main.xml  nav_items.xml  navbar_items.xml  toolbar_clone.xml  toolbar_log_choose.xml  (+3 more)
doc/: Compatibility.md  pcapng.md
doc/mode/: Clone.md  OnDevice.md  Relay.md  Replay.md
gradle/wrapper/: gradle-wrapper.properties
nfcd/: CMakeLists.txt  build.gradle  lint-baseline.xml
nfcd/src/main/: AndroidManifest.xml
nfcd/src/main/assets/: xposed_init
nfcd/src/main/java/de/tu_darmstadt/seemoo/nfcgate/xposed/: Hooks.java  InjectionBroadcastWrapper.java  Native.java
nfcd/src/main/java/tud/seemuh/nfcgate/xposed/: Hooks.java  IPCBroadcastReceiver.java  InjectionBroadcastWrapper.java  Native.java
nfcd/src/main/jni/: armcode.cpp  chip.cpp  config.h  hooks.cpp  ipc.cpp  ipc.h  java.cpp  javainterface.cpp  main.cpp  nfcd.h  symbols.h
nfcd/src/main/jni/include/nfcd/: error.h  libnfc-external.h  nfcd.h
nfcd/src/main/jni/include/nfcd/helper/: Config.h  EventQueue.h  MapInfo.h  StringUtil.h  Symbol.h  SymbolTable.h  System.h
nfcd/src/main/jni/include/nfcd/hook/: Hook.h  IHook.h  Symbol.h  arm64_cacheflush.h
nfcd/src/main/jni/include/nfcd/hook/impl/: ADBIHook.h  XHook.h  arm64_cacheflush.h
nfcd/src/main/jni/src/: chip.cpp  javainterface.cpp  jni.cpp  nfcd.cpp
nfcd/src/main/jni/src/helper/: Config.cpp  ELFMemoryParser.h  MapInfo.cpp  SymbolTable.cpp  System.cpp
nfcd/src/main/jni/src/hook/: Hook.cpp  IHook.cpp  Symbol.cpp  hook.cpp
nfcd/src/main/jni/src/hook/helper/: System.cpp
nfcd/src/main/jni/src/hook/impl/: ADBIHook.cpp  XHook.cpp
protobuf/: build.gradle
(+295 files in other folders)
